k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: krampoline
  name: krampoline
spec:
  ports:
    - name: 5173-5173
      port: 5173
      protocol: TCP
      targetPort: 5173
  selector:
    app: krampoline
  type: LoadBalancer
